# alife_discovery

./: .gitignore  .zenodo.json  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  project_onboarding_guide_objective_free_alife.md  pyproject.toml  run_search.py  spec.md  unified_review.md  visualize.py  zenodo_metadata_v4.json
alife_discovery/: aggregation.py  export_web.py  filters.py  metrics.py  rules.py  run_search.py  schemas.py  simulation.py  stats.py  visualize.py  viz_cli.py  viz_render.py  viz_theme.py  world.py
docs/: artifact_publication_policy.md  checksums_sha256.txt  new_research_plan.md  paper_result_manifest.json  paper_source_audit_web.md  repro_paper_anonymous.md  reproducibility.md  reviewer_response_mapping.md  stage_b_results.md  stage_c_results.md  zenodo_upload_manifest.md
legacy/: README.md
objectless_alife/: aggregation.py  config.py  export_web.py  filters.py  metrics.py  rules.py  run_search.py  schemas.py  simulation.py  stats.py  visualize.py  viz_cli.py  viz_render.py  viz_theme.py  world.py
paper/: main.tex  peer_review_A_on_2026-02-23.md  references.bib  supplementary.tex
scripts/: _analysis_common.py  _common.py  assembly_audit.py  baseline_analysis.py  cascaded_filter_analysis.py  catalytic_control.py  ceiling_model.py  check_doc_paths.py  compute_graph_metrics.py  config_catalyst.py  exact_null_analysis.py  hierarchical_analysis.py  mechanism_analysis.py  metric_comparison.py  mi_vs_n_pairs_analysis.py  multi_metric_analysis.py  multi_seed_p1_control.py  no_filter_analysis.py  param_sweep.py  phase_diagram.py  (+33 more)
(+157 files in other folders)
