[project]
name = "alife-discovery"
version = "0.1.0"
description = "Objective-free ALife with Assembly Theory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.0",
  "networkx>=3.6.1",
  "pyarrow>=18.0.0",
  "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alife_discovery"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["legacy/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["legacy/"]
files = [
  "alife_discovery/config/",
  "alife_discovery/domain/",
  "alife_discovery/metrics/",
  "alife_discovery/io/",
  "alife_discovery/analysis/",
  "alife_discovery/simulation/",
  "alife_discovery/experiments/",
  "alife_discovery/viz/",
]

[dependency-groups]
dev = []
